--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     Hello world
-    <p> Juice</p>
+    <ul>
+      <li> <a href="project1.html"> Project 1</a>
+       <li> <a href="project2.html"> Project 2</a>
+
     <script src="script.js"></script>
   </body>
 </html>
