--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     Hello world
     <ul>
-      <li> <a href="project1.html"> Project 1</a>
-       <li> <a href="project2.html"> Project 2</a>
+      <li> <a href="unit1.html"> Unit 1</a>
+       <li> <a href="unit2.html"> Unit 2</a>
 
     <script src="script.js"></script>
   </body>
